# open-crawler

./: CONTRIBUTING.MD  Cargo.toml  LICENSE  crawl_results.db  readme.md
src/: lib.rs  main.rs
src/crawler/: fetch.rs  mod.rs  parser.rs  visited.rs
src/storage/: mod.rs  sqlite.rs
